--- a/Blog_Escola/Areas/Admin/Views/Shared/_LoginLayout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_LoginLayout.cshtml
@@ -29,7 +29,7 @@
         @RenderBody()
 
     </div>
-
+    
     <!-- Bootstrap core JavaScript-->
     <script src="~/Dashboard/vendor/jquery/jquery.min.js"></script>
     <script src="~/Dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -39,6 +39,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="~/Dashboard/js/sb-admin-2.min.js"></script>
+    @await Component.InvokeAsync("Notyf")
     @await RenderSectionAsync("Scripts", required: false)
 
 </body>
