--- a/Blog_Escola/Views/Page/About.cshtml
+++ b/Blog_Escola/Views/Page/About.cshtml
@@ -7,8 +7,8 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
-                    <h1>About Me</h1>
-                    <span class="subheading">This is what I do.</span>
+                    <h1>Sobre mim</h1>
+                    <span class="subheading">Saiba um pouco mais sobre quem eu sou.</span>
                 </div>
             </div>
         </div>
@@ -19,9 +19,9 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                <p>Sou um desenvolvedor de software brasileiro focado em aplicativos Web e Mobile. Curioso, sedento de aprender e autodidata para adquirir conhecimento. Em meu tempo livre, costumo trabalhar em projetos voluntários, ajudar a comunidade técnica e outros desenvolvedores.</p>
+                <p>Minhas melhores habilidades são relacionadas com a plataforma .Net. Também possuo conhecimentos e habilidades para trabalhar com HTML, CSS, JavaScript e Angular.</p>
+                
             </div>
         </div>
     </div>
