--- a/Blog_Escola/Views/Page/Contact.cshtml
+++ b/Blog_Escola/Views/Page/Contact.cshtml
@@ -7,8 +7,8 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
-                    <h1>Contact Me</h1>
-                    <span class="subheading">Have questions? I have answers.</span>
+                    <h1>Fale Comigo</h1>
+                    <span class="subheading">Gostou do que viu? Tem alguma dúvida?</span>
                 </div>
             </div>
         </div>
@@ -19,7 +19,7 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+                <p>Preencha o formulário e descreva suas dúvidas e problemas!</p>
                 <div class="my-5">
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
@@ -30,25 +30,25 @@
                     <!-- to get an API token!-->
                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <div class="form-floating">
-                            <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                            <label for="name">Name</label>
-                            <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                            <input class="form-control" id="name" type="text" placeholder="Seu Nome..." data-sb-validations="required" />
+                            <label for="name">Nome</label>
+                            <div class="invalid-feedback" data-sb-feedback="name:required">É necessário um nome.</div>
                         </div>
                         <div class="form-floating">
-                            <input class="form-control" id="email" type="email" placeholder="Enter your email..." data-sb-validations="required,email" />
-                            <label for="email">Email address</label>
-                            <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                            <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                            <input class="form-control" id="email" type="email" placeholder="Seu e-mail..." data-sb-validations="required,email" />
+                            <label for="email">E-mail</label>
+                            <div class="invalid-feedback" data-sb-feedback="email:required">É necessário um e-mail.</div>
+                            <div class="invalid-feedback" data-sb-feedback="email:email">E-mail não válido.</div>
                         </div>
                         <div class="form-floating">
-                            <input class="form-control" id="phone" type="tel" placeholder="Enter your phone number..." data-sb-validations="required" />
-                            <label for="phone">Phone Number</label>
-                            <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                            <input class="form-control" id="phone" type="tel" placeholder="Entre com seu telefone..." data-sb-validations="required" />
+                            <label for="phone">Telefone</label>
+                            <div class="invalid-feedback" data-sb-feedback="phone:required">É necessário um número.</div>
                         </div>
                         <div class="form-floating">
-                            <textarea class="form-control" id="message" placeholder="Enter your message here..." style="height: 12rem" data-sb-validations="required"></textarea>
-                            <label for="message">Message</label>
-                            <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                            <textarea class="form-control" id="message" placeholder="Digite aqui sua dúvida..." style="height: 12rem" data-sb-validations="required"></textarea>
+                            <label for="message">Mensagem</label>
+                            <div class="invalid-feedback" data-sb-feedback="message:required">É necessário uma mensagem.</div>
                         </div>
                         <br />
                         <!-- Submit success message-->
@@ -57,7 +57,7 @@
                         <!-- has successfully submitted-->
                         <div class="d-none" id="submitSuccessMessage">
                             <div class="text-center mb-3">
-                                <div class="fw-bolder">Form submission successful!</div>
+                                <div class="fw-bolder">Formulário enviado com sucesso!</div>
                                 To activate this form, sign up at
                                 <br />
                                 <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
@@ -67,9 +67,9 @@
                         <!---->
                         <!-- This is what your users will see when there is-->
                         <!-- an error submitting the form-->
-                        <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                        <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erro no envio da mensagem!</div></div>
                         <!-- Submit Button-->
-                        <button class="btn btn-primary text-uppercase disabled" id="submitButton" type="submit">Send</button>
+                        <button class="btn btn-primary text-uppercase disabled" id="submitButton" type="submit">Enviar</button>
                     </form>
                 </div>
             </div>
