--- a/Blog_Escola/Areas/Admin/Views/User/Login.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/User/Login.cshtml
@@ -17,7 +17,7 @@
                     <div class="col-lg-6">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">Bem vindo novamente!</h1>
                             </div>
                             <form class="user" method="post" asp-action="Login">
                                 <div class="form-group">
@@ -28,28 +28,27 @@
                                 </div>
                                 <div class="form-group">
                                     <input asp-for="Password" type="password" class="form-control form-control-user"
-                                           id="exampleInputPassword" placeholder="Password">
+                                           id="exampleInputPassword" placeholder="Senha">
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <div class="custom-control custom-checkbox small">
                                         <input asp-for="RememberMe" type="checkbox" class="custom-control-input" id="customCheck">
                                         <label class="custom-control-label" for="customCheck">
-                                            Remember
-                                            Me
+                                            Lembrar-me
                                         </label>
                                     </div>
                                 </div>
-                                <input type="submit" href="index.html" class="btn btn-primary btn-user btn-block" value="Login">
+                                <input type="submit" href="index.html" class="btn btn-primary btn-user btn-block" value="Entrar">
                                 
                                 
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small" href="forgot-password.html">Esqueceu sua senha?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="register.html">Create an Account!</a>
+                                <a class="small" href="register.html">Criar uma conta!</a>
                             </div>
                         </div>
                     </div>
