--- a/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">DOT Admin</div>
             </a>
 
             <!-- Divider -->
@@ -58,13 +58,13 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <!-- Divider -->
-            <hr class="sidebar-divider my-0">
+            @*<hr class="sidebar-divider my-0">*@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-user"></i>
-                    <span>User</span>
+                    <span>Usuário</span>
                 </a>
             </li>
 
@@ -78,14 +78,14 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                    aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-file"></i>
-                    <span>Pages</span>
+                    <span>Páginas</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">About</a>
-                        <a class="collapse-item" href="utilities-border.html">Contact</a>
+                        <h6 class="collapse-header">Utilidades:</h6>
+                        <a class="collapse-item" href="utilities-color.html">Sobre</a>
+                        <a class="collapse-item" href="utilities-border.html">Contato</a>
                         <a class="collapse-item" href="utilities-animation.html">Privacy</a>
                         
                     </div>
@@ -154,7 +154,7 @@
                                 <form asp-action="Logout" asp-controller="User" asp-area="Admin" method="post">
                                     <button type="submit" class="dropdown-item">
                                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                        Logout
+                                        Sair
                                     </button>
                                 </form>
                                 
@@ -173,7 +173,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; Escola DOTNET @DateTime.Now.Year</span>
                     </div>
                 </div>
             </footer>
