Adicionado os links para minhas redes sociais

--- a/Blog_Escola/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                             <a href="#!">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
-                                    <i class="fab fa-face fa-stack-1x "></i>
+                                    <i class="fas fa-laugh-wink fa-stack-1x "></i>
                                 </span>
                             </a>
                         </li>
