adicionado o link para minhas redes sociais

--- a/Blog_Escola/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <ul class="list-inline text-center">
                         <li class="list-inline-item">
-                            <a href="#!">
+                            <a href="https://github.com/devjuliomesquita" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
                                     <i class="fab fa-github fa-stack-1x "></i>
@@ -53,7 +53,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#!">
+                            <a href="https://www.linkedin.com/in/dev-julio-c-martins/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
                                     <i class="fab fa-linkedin fa-stack-1x "></i>
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#!">
+                            <a href="https://api.whatsapp.com/send?phone=5585996816053&text=Ol%C3%A1%2C%20encontrei%20seu%20portf%C3%B3lio%20e%20estou%20interessado%20em%20seu%20trabalho." target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
                                     <i class="fab fa-whatsapp fa-stack-1x "></i>
@@ -69,15 +69,15 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#!">
+                            <a href="mailto:juliocesarmcamilo@gmail.com" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
-                                    <i class="fab fa-envelope fa-stack-1x "></i>
+                                    <i class="fa-regular fa-envelope fa-stack-1x "></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#!">
+                            <a href="https://portifolio-pessoal-tan.vercel.app/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
                                     <i class="fas fa-laugh-wink fa-stack-1x "></i>
