--- a/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
@@ -1,12 +1,42 @@
-﻿@{
+﻿@model List<Blog_Escola.ViewModels.UserVM>
+@{
     ViewData["Title"] = "Index";
 }
 <!-- Begin Page Content -->
 <div class="container-fluid">
-
+    <a class="btn btn-primary mb-1"></a>
     <!-- Page Heading -->
-    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+    <div class="card">
+        <div class="card-header bg-primary" > 
+            <h4 class="card-title text-white">Lista de Usuários</h4>
+        </div>
+        <div class="card-body">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Sobrenome</th>
+                        <th>Nome de Usuário</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach(var user in Model)
+                    {
+                        <tr>
+                            <td>@user.FirstName</td>
+                            <td>@user.LastName</td>
+                            <td>@user.UserName</td>
+                            <td>
+                                <a  class="btn btn-secondary">Mudar a senha</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+
+        </div>
+        
         
     </div>
 
