--- a/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
 
     <!-- Custom styles for this template-->
     <link href="~/Dashboard/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css" rel="stylesheet">
 
 </head>
 
@@ -226,6 +227,10 @@
     <!-- Page level custom scripts -->
     <script src="~/Dashboard/js/demo/chart-area-demo.js"></script>
     <script src="~/Dashboard/js/demo/chart-pie-demo.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    <script>
+        let table = new DataTable('#myTable');
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
     @await Component.InvokeAsync("Notyf")
 
