--- a/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
@@ -4,14 +4,14 @@
 }
 <!-- Begin Page Content -->
 <div class="container-fluid">
-    <a class="btn btn-primary mb-1"></a>
+    <a class="btn btn-primary mb-1"><i class="fa-solid fa-plus"></i> Add Usuário</a>
     <!-- Page Heading -->
     <div class="card">
         <div class="card-header bg-primary" > 
             <h4 class="card-title text-white">Lista de Usuários</h4>
         </div>
         <div class="card-body">
-            <table class="table table-striped table-hover">
+            <table class="table table-striped table-hover" id="myTable">
                 <thead>
                     <tr>
                         <th>Nome</th>
