Criado a tela de registro

--- a/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <!-- Begin Page Content -->
 <div class="container-fluid">
-    <a class="btn btn-primary mb-1"><i class="fa-solid fa-plus"></i> Add Usuário</a>
+    <a class="btn btn-primary mb-1" asp-action="Register" asp-controller="User" asp-area="Admin"><i class="fa-solid fa-plus"></i> Add Usuário</a>
     <!-- Page Heading -->
     <div class="card">
         <div class="card-header bg-primary" > 
