criado na tabela o tipo admin e author

--- a/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
@@ -17,6 +17,8 @@
                         <th>Nome</th>
                         <th>Sobrenome</th>
                         <th>Nome de Usuário</th>
+                        <th>E-mail</th>
+                        <th>Tipo de Usuário</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
@@ -27,6 +29,8 @@
                             <td>@user.FirstName</td>
                             <td>@user.LastName</td>
                             <td>@user.UserName</td>
+                            <td>@user.Email</td>
+                            <td>@user.Role</td>
                             <td>
                                 <a  class="btn btn-secondary">Mudar a senha</a>
                             </td>
