Adicionado o pacote Browserlink para atualizações auto do CSS e HTML

--- a/Blog_Escola/Views/Page/Privacy.cshtml
+++ b/Blog_Escola/Views/Page/Privacy.cshtml
@@ -8,7 +8,7 @@
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
                     <h1>Privacy</h1>
-                    <span class="subheading">Privacy Police.</span>
+                    <span class="subheading">Testando de boas.</span>
                 </div>
             </div>
         </div>
