--- a/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -229,7 +229,11 @@
     <script src="~/Dashboard/js/demo/chart-pie-demo.js"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
     <script>
-        let table = new DataTable('#myTable');
+        let table = new DataTable('#myTable',{
+            language: {
+                url: '//cdn.datatables.net/plug-ins/1.13.4/i18n/pt-BR.json',
+            },
+        });
     </script>
     @await RenderSectionAsync("Scripts", required: false)
     @await Component.InvokeAsync("Notyf")
