Criado a controller Post Página Post Página de acesso negado

--- a/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/User/Index.cshtml
@@ -32,7 +32,7 @@
                             <td>@user.Email</td>
                             <td>@user.Role</td>
                             <td>
-                                <a  class="btn btn-secondary"
+                                <a  class="btn btn-info"
                                     asp-action="ResetPassword"
                                     asp-controller="User"
                                     asp-route-id="@user.Id">Mudar a senha</a>
