--- a/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" asp-action="Index" asp-controller="Post" asp-area="Admin">
                     <i class="fas fa-fw fa-edit"></i>
                     <span>Post</span>
                 </a>
@@ -59,50 +59,35 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <!-- Divider -->
-            @*<hr class="sidebar-divider my-0">*@
+            @if (User.IsInRole("Admin"))
+            {
+                <!-- Nav Item - Dashboard -->
+                <li class="nav-item active">
+                    <a class="nav-link" asp-action="Index" asp-controller="User" asp-area="Admin">
+                        <i class="fas fa-fw fa-user"></i>
+                        <span>Usuário</span>
+                    </a>
+                </li>
+                <hr class="sidebar-divider d-none d-md-block">
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+                       aria-expanded="true" aria-controls="collapseUtilities">
+                        <i class="fas fa-fw fa-file"></i>
+                        <span>Páginas</span>
+                    </a>
+                    <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+                         data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <h6 class="collapse-header">Utilidades:</h6>
+                            <a class="collapse-item" href="utilities-color.html">Sobre</a>
+                            <a class="collapse-item" href="utilities-border.html">Contato</a>
+                            <a class="collapse-item" href="utilities-animation.html">Privacy</a>
 
-            <!-- Nav Item - Dashboard -->
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-user"></i>
-                    <span>Usuário</span>
-                </a>
-            </li>
-
-            
-
-            <!-- Nav Item - Pages Collapse Menu -->
-            
-
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                   aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-file"></i>
-                    <span>Páginas</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                     data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Utilidades:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Sobre</a>
-                        <a class="collapse-item" href="utilities-border.html">Contato</a>
-                        <a class="collapse-item" href="utilities-animation.html">Privacy</a>
-                        
+                        </div>
                     </div>
-                </div>
-            </li>
-
-            
-
-          
-
-            
-
-           
-
-            <!-- Divider -->
-            <hr class="sidebar-divider d-none d-md-block">
+                </li>
+                <hr class="sidebar-divider d-none d-md-block">
+            }
 
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
