--- a/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <!-- Begin Page Content -->
 <div class="container-fluid">
-    <a class="btn btn-primary mb-1"  asp-controller="Post" asp-area="Admin"><i class="fa-solid fa-plus"></i> Add Post</a>
+    <a class="btn btn-primary mb-1" asp-action="Create"  asp-controller="Post" asp-area="Admin"><i class="fa-solid fa-plus"></i> Add Post</a>
     <!-- Page Heading -->
     <div class="card">
         <div class="card-header bg-primary">
