Criado a post na controller.

--- a/Blog_Escola/Areas/Admin/Views/Post/Create.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Post/Create.cshtml
@@ -12,7 +12,7 @@
             <h4 class="card-title text-white">Crie um Novo Post</h4>
         </div>
         <div class="card-body mb-2">
-            <form asp-action="Create" asp-controller="Post" asp-area="Admin">
+            <form asp-action="Create" asp-controller="Post" asp-area="Admin" enctype="multipart/form-data">
                 <div class="row">
                     <div class="col-8">
                         <div class="mb-2">
