--- a/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Blog_Escola.ViewModels.PostVM>
 @{
     ViewData["Title"] = "Index Post";
 }
@@ -10,8 +10,51 @@
         <div class="card-header bg-primary">
             <h4 class="card-title text-white">Lista de Post</h4>
         </div>
-        <div class="card-body">
-           
+        <div class="card-body " style="background-color:lightgray">
+            @foreach(var post in Model)
+            {
+                <div class="rounded mb-3 bg-white p-2">
+                    <div class="row">
+                        <div class="col-2 d-flex">
+                            @if(post.Thumbnail == null)
+                            {
+                                <img src="~/Thumbnail/default-image.jpg" style="object-fit:fill; height:100px; border-radius:10px;" />
+                            }
+                            else
+                            {
+                                <img class="img-fluid"src="~/Thumbnail/@post.Thumbnail" style=" border-radius:10px;" />
+                            }
+
+                        </div>
+                        <div class="col-8 d-flex justify-content-center flex-column">
+                            <div class="row">
+                                <h4 class="text-primary fw-bold">@post.Title</h4>
+                            </div>
+                            <div class="row">
+                                <h5 class="text-primary fw-bold">@post.ShortDescription</h5>
+                            </div>
+                            <div class="row">
+                                <p>Autor : @post.AuthorName / Criado: @post.CreatedAt</p>
+                            </div>
+
+                        </div>
+                        <div class="col-2">
+                            <div class="row d-flex justify-content-center">
+                                <p class="text-secundary fw-bold  align-content-center" style="font-size:0.8rem"> Criado: @post.CreatedAt</p>
+                            </div>
+                            <div class="row d-flex justify-content-center">
+                                <p class="">
+                                    <a class="btn btn-success "><i class="fa fa-upload"></i></a>
+                                    <a class="btn btn-warning "><i class="fa fa-edit"></i></a>
+                                    <a class="btn btn-danger "><i class="fa fa-trash"></i></a>
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+            
 
         </div>
 
