--- a/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
@@ -38,17 +38,15 @@
                             </div>
 
                         </div>
-                        <div class="col-2">
+                        <div class="col-2 d-flex justify-content-center flex-column">
                             <div class="row d-flex justify-content-center">
-                                <p class="text-secundary fw-bold  align-content-center" style="font-size:0.8rem"> Criado: @post.CreatedAt</p>
+                                <h4 class="text-secundary fw-bold  align-content-center "> Ações</h4>
                             </div>
                             <div class="row d-flex justify-content-center">
-                                <p class="">
-                                    <a class="btn btn-success" data-bs-toggle="modal"><i class="fa fa-upload"></i></a>
-                                    <a class="btn btn-warning "><i class="fa fa-edit"></i></a>
-                                    <form asp-action="Delete" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id" method="post" onsubmit="return confirm('Realmente quer deletar este post?')">
-                                        <button type="submit" class="btn btn-danger "><i class="fa fa-trash"></i></button>
-                                    </form>
+                                <p class="m-1">
+                                    <a class="btn btn-success" data-bs-toggle="modal" asp-action="Delete" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id"><i class="fa fa-upload"></i></a>
+                                    <a asp-action="Edit" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id" class="btn btn-warning "><i class="fa fa-edit"></i></a>
+                                    <a class="btn btn-danger" data-bs-toggle="modal" asp-action="Delete" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id"><i class="fa fa-trash"></i></a>
                                     
 
                                     
