Adicionado Tiny. cloud como editor de texto

--- a/Blog_Escola/Areas/Admin/Views/Post/Create.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Post/Create.cshtml
@@ -27,7 +27,7 @@
                         </div>
                         <div class="mb-2">
                             <label>Descrição</label>
-                            <textarea type="text" asp-for="Description" class="form-control" rows="8"></textarea>
+                            <textarea id="richEditor" type="text" asp-for="Description" class="form-control" rows="8"></textarea>
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
                     </div>
