--- a/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -213,11 +213,24 @@
     <script src="~/Dashboard/js/demo/chart-area-demo.js"></script>
     <script src="~/Dashboard/js/demo/chart-pie-demo.js"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.tiny.cloud/1/261igexgj2eaijfwsai59yevqqvvzde31jdjee9jtufsy85b/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         let table = new DataTable('#myTable',{
             language: {
                 url: '//cdn.datatables.net/plug-ins/1.13.4/i18n/pt-BR.json',
             },
+        });
+        tinymce.init({
+            selector: '#richEditor',
+            language: 'pt_BR',
+            plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+            tinycomments_mode: 'embedded',
+            tinycomments_author: 'Author name',
+            mergetags_list: [
+                { value: 'First.Name', title: 'First Name' },
+                { value: 'Email', title: 'Email' },
+            ]
         });
     </script>
     @await RenderSectionAsync("Scripts", required: false)
