--- a/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                          data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">Utilidades:</h6>
-                            <a class="collapse-item" href="utilities-color.html">Sobre</a>
+                            <a class="collapse-item" asp-action="About" asp-controller="Page" asp-area="Admin">Sobre</a>
                             <a class="collapse-item" href="utilities-border.html">Contato</a>
                             <a class="collapse-item" href="utilities-animation.html">Privacy</a>
 
