--- a/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -78,10 +78,10 @@
                     <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                          data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Utilidades:</h6>
+                            <h6 class="collapse-header">Edição:</h6>
                             <a class="collapse-item" asp-action="About" asp-controller="Page" asp-area="Admin">Sobre</a>
-                            <a class="collapse-item" href="utilities-border.html">Contato</a>
-                            <a class="collapse-item" href="utilities-animation.html">Privacy</a>
+                            <a class="collapse-item" asp-action="Contact" asp-controller="Page" asp-area="Admin">Contato</a>
+                            <a class="collapse-item" asp-action="Privacy" asp-controller="Page" asp-area="Admin">Privacy</a>
 
                         </div>
                     </div>
