Realizado edições de Layout

--- a/Blog_Escola/Areas/Admin/Views/Page/Privacy.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Page/Privacy.cshtml
@@ -5,10 +5,10 @@
 }
 <!-- Begin Page Content -->
 <div class="container-fluid mb-4">
-    <a class="btn btn-primary mb-1" asp-action="Index" asp-controller="User" asp-area="Admin"><i class="fa fa-arrow-left"></i> Lista de Usuários </a>
+    <a class="btn btn-outline-secondary mb-1" asp-action="Index" asp-controller="User" asp-area="Admin"><i class="fa fa-arrow-left"></i> Lista de Usuários </a>
     <!-- Page Heading -->
     <div class="card ">
-        <div class="card-header bg-primary">
+        <div class="card-header bg-gradient-secondary">
             <h4 class="card-title text-white">Edição: Página Privacy</h4>
         </div>
         <div class="card-body mb-2">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="mb-2 m-auto">
-                    <button type="submit" class="btn btn-primary m-auto">Atualizar Página</button>
+                    <button type="submit" class="btn btn-secondary   m-auto">Atualizar Página</button>
                 </div>
             </form>
 
