--- a/Blog_Escola/Areas/Admin/Views/Post/Edit.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Post/Edit.cshtml
@@ -5,10 +5,10 @@
 }
 <!-- Begin Page Content -->
 <div class="container-fluid mb-4">
-    <a class="btn btn-primary mb-1" asp-action="Index" asp-controller="Post" asp-area="Admin"><i class="fa fa-arrow-left"></i> Lista de Posts </a>
+    <a class="btn btn-outline-secondary mb-1" asp-action="Index" asp-controller="Post" asp-area="Admin"><i class="fa fa-arrow-left"></i> Lista de Posts </a>
     <!-- Page Heading -->
     <div class="card ">
-        <div class="card-header bg-primary">
+        <div class="card-header bg-gradient-secondary">
             <h4 class="card-title text-white">Editar Post</h4>
         </div>
         <div class="card-body mb-2">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="mb-2 m-auto">
-                    <button type="submit" class="btn btn-primary m-auto">Editar Post</button>
+                    <button type="submit" class="btn btn-secondary m-auto">Editar Post</button>
                 </div>
             </form>
 
