--- a/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
@@ -4,10 +4,10 @@
 }
 <!-- Begin Page Content -->
 <div class="container-fluid mb-4">
-    <a class="btn btn-primary mb-1" asp-action="Create" asp-controller="Post" asp-area="Admin"><i class="fa fa-plus-circle"></i> Add Post</a>
+    <a class="btn btn-outline-secondary mb-1" asp-action="Create" asp-controller="Post" asp-area="Admin"><i class="fa fa-plus-circle"></i> Add Post</a>
     <!-- Page Heading -->
     <div class="card">
-        <div class="card-header bg-primary">
+        <div class="card-header bg-gradient-secondary">
             <h4 class="card-title text-white">Lista de Post</h4>
         </div>
         <div class="card-body " style="background-color:lightgray">
@@ -28,10 +28,10 @@
                         </div>
                         <div class="col-8 d-flex justify-content-center flex-column">
                             <div class="row">
-                                <h4 class="text-primary fw-bold">@post.Title</h4>
+                                <h4 class="text-dark fw-bold">@post.Title</h4>
                             </div>
                             <div class="row">
-                                <h5 class="text-primary fw-bold">@post.ShortDescription</h5>
+                                <h5 class="text-dark fw-bold">@post.ShortDescription</h5>
                             </div>
                             <div class="row">
                                 <p>Autor : @post.AuthorName / Criado: @post.CreatedAt</p>
@@ -40,12 +40,12 @@
                         </div>
                         <div class="col-2 d-flex justify-content-center flex-column">
                             <div class="row d-flex justify-content-center">
-                                <h4 class="text-secundary fw-bold  align-content-center "> Ações</h4>
+                                <h4 class="text-dark fw-bold  align-content-center "> Ações</h4>
                             </div>
                             <div class="row d-flex justify-content-center">
                                 <p class="m-1">
-                                    <a class="btn btn-success" data-bs-toggle="modal" asp-action="Delete" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id"><i class="fa fa-upload"></i></a>
-                                    <a asp-action="Edit" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id" class="btn btn-warning "><i class="fa fa-edit"></i></a>
+                                    <a class="btn btn-outline-dark" data-bs-toggle="modal" asp-action="Delete" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id"><i class="fa fa-upload"></i></a>
+                                    <a asp-action="Edit" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id" class="btn btn-outline-dark "><i class="fa fa-edit"></i></a>
                                     <a class="btn btn-danger" data-bs-toggle="modal" asp-action="Delete" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id"><i class="fa fa-trash"></i></a>
                                     
 
