--- a/Blog_Escola/Areas/Admin/Views/User/Login.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/User/Login.cshtml
@@ -23,7 +23,7 @@
                                 <div class="form-group">
                                     <input asp-for="Username" type="email" class="form-control form-control-user"
                                            id="exampleInputEmail" aria-describedby="emailHelp"
-                                           placeholder="Usuário">
+                                           placeholder="E-mail do Usuário">
                                     <span asp-validation-for="Username" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
@@ -39,16 +39,16 @@
                                         </label>
                                     </div>
                                 </div>
-                                <input type="submit" href="index.html" class="btn btn-primary btn-user btn-block" value="Entrar">
+                                <input type="submit" href="index.html" class="btn btn-secondary btn-user btn-block font-weight-bold" value="Entrar">
                                 
                                 
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Esqueceu sua senha?</a>
+                                <a class="small text-secondary"  href="forgot-password.html">Esqueceu sua senha?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="register.html">Criar uma conta!</a>
+                                <a class="small text-secondary" href="register.html">Criar uma conta!</a>
                             </div>
                         </div>
                     </div>
