--- a/Blog_Escola/Areas/Admin/Views/User/Register.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/User/Register.cshtml
@@ -6,10 +6,10 @@
 }
 <!-- Begin Page Content -->
 <div class="container-fluid mb-4">
-    <a class="btn btn-primary mb-1" asp-action="Index" asp-controller="User" asp-area="Admin"><i class="fa fa-arrow-left"></i> Lista de Usuários </a>
+    <a class="btn btn-outline-secondary mb-1" asp-action="Index" asp-controller="User" asp-area="Admin"><i class="fa fa-arrow-left"></i> Lista de Usuários </a>
     <!-- Page Heading -->
     <div class="card ">
-        <div class="card-header bg-primary" > 
+        <div class="card-header bg-gradient-secondary" > 
             <h4 class="card-title text-white">Cadastro de Usuários</h4>
         </div>
         <div class="card-body ">
@@ -44,7 +44,7 @@
                     <input type="checkbox" asp-for="IsAdmin" />
                 </div>
                 <div class="mb-2">
-                    <button type="submit" class="btn btn-primary">Criar</button>
+                    <button type="submit" class="btn btn-secondary">Criar Usuário</button>
                 </div>
             </form>            
 
