Solucionado o Bug das imagens

--- a/Blog_Escola/Views/Page/Privacy.cshtml
+++ b/Blog_Escola/Views/Page/Privacy.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Privacy";
     string pageThumbnail = "";
-    if (Model.ThumbnailUrl == null)
+    if (Model.ThumbnailUrl == "")
     {
         pageThumbnail = "/Blog/assets/img/about-bg.jpg";
     }
