--- a/Blog_Escola/Views/Page/Contact.cshtml
+++ b/Blog_Escola/Views/Page/Contact.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Contact";
     string pageThumbnail = "";
-    if (Model.ThumbnailUrl == null)
+    if (Model.ThumbnailUrl == "")
     {
         pageThumbnail = "/Blog/assets/img/about-bg.jpg";
     }
