Criado a página de Index para o post completo

--- a/Blog_Escola/Views/Home/Index.cshtml
+++ b/Blog_Escola/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
             {
                 <!-- Post preview-->
                 <div class="post-preview">
-                    <a href="post.html">
+                    <a asp-action="Post" asp-controller="Blog" asp-route-Slug="@post.Slug">
                         <h2 class="post-title">@post.Title</h2>
                         <h3 class="post-subtitle">@post.ShortDescription</h3>
                     </a>
