--- a/Blog_Escola/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                             <a href="@vm.LinkedIn" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
-                                    <i class="fab fa-linkedin fa-stack-1x "></i>
+                                    <i class="fa-brands fa-linkedin-in fa-stack-1x "></i>
                                 </span>
                             </a>
                         </li>
